--- a/assets/css/common/normalize.css
+++ b/assets/css/common/normalize.css
@@ -18,19 +18,29 @@ h1, h2, h3 {
     font-family: var(--font-family-title);
 }
 
-h1, h2 {
+h1 {
+    font-size: 2.5rem;
+    color: var(--color-font-title-primary-bis);
+}
+
+h2 {
     font-size: 2.5rem;
     color: var(--color-font-title-secondary);
 }
 
 h3 {
     font-size: 2rem;
-    color: var(--color-font-title-primary);
+    color: var(--color-font-title-secondary);
 }
 
 h4 {
     text-align: center;
     font-size: 1.5rem;
+    color: var(--color-font-title-primary);
+}
+
+h5 {
+    font-size: 1.1rem;
     color: var(--color-font-title-primary);
 }
 
