--- a/index.css
+++ b/index.css
@@ -175,8 +175,6 @@
         grid-auto-rows: 1fr;
         gap: 3rem;
         margin-top: 5rem;
-
-
     }
 }
 
@@ -211,7 +209,7 @@
 
     .selection_place-name {
         font-size: 1.7rem;
-        color: var(--color-font-title-tertiary);
+        color: var(--color-font-light);
     }
 
     .selection_place-city {
@@ -238,25 +236,22 @@
     .selection_place-note {
         display: flex;
         justify-content: center;
+        gap: 0.4rem;
         padding: 1rem;
         border-bottom: solid 1px var(--color-bg-separator);
 
         div {
-            width: 1.5rem;
-            height: 1.5rem;
-            margin: 0 0.4rem;
-            border: solid 1px var(--color-bg-separator);
-            border-radius: 50%;
+            font-family: var(--font-family-etoile);
+            color: var(--color-font-medium);
+            font-size: 1.5rem;
+
+            &::before {
+                content: "\002605";
+            }
         }
 
         .note-active {
-            border: solid 1px var(--color-font-light);
-            background-color: var(--color-bg-note);
-        }
-
-        .note-empty {
-            border: solid 1px var(--color-font-light);
-            background-color: var(--color-bg-separator);
+            color: var(--color-bg-note);
         }
     }
     
