--- a/assets/css/params/variables.css
+++ b/assets/css/params/variables.css
@@ -16,7 +16,7 @@
     --color-bg-note: #FDD663;
 
     /* SHADOW COLOR */
-    --color-shadow-primary: #78818b;
+    --color-shadow-primary: #666c72;
     --color-shadow-secondary: #96a1ac;
 
     /* FONT COLOR */
