--- a/assets/css/common/header.css
+++ b/assets/css/common/header.css
@@ -110,12 +110,12 @@
     >li:has(.bandeau_menu-libelle) {
         &:hover, &:has(a:focus) {
             .bandeau_menu-libelle {
-                color: var(--color-hover-primary);
+                /* color: var(--color-hover-primary); */
             }
 
             .bandeau_menu-libelle::after {
                 transform: rotate(90deg);
-                border-left-color: var(--color-hover-primary);
+                /* border-left-color: var(--color-hover-primary); */
             }
         }
     }
@@ -128,8 +128,11 @@
     top: 100%;
     left: 0;
     width: 100%;
+    height: 0;
     background-color: var(--color-bg-bandeau-submenu);
     box-shadow: 0 2px 10px var(--color-shadow-primary);
+    transition: 0.4s ease-in-out;
+    overflow: hidden;
 
     >div {
         display: flex;
@@ -180,12 +183,6 @@
             padding: 1rem 0;
         }
     }
-
-    .bandeau_menu-dropdown {
-        transition: 0.4s ease-in-out;
-        height: 0;
-        overflow: hidden;
-    }    
 }
 
 /*************************************************/
